# OSLab4

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  OSLab4.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
OSLab4/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  OSLab4.h  Receiver.cpp  Sender.cpp  SenderReceiver.sln  cmake_install.cmake  receiver.vcxproj  receiver.vcxproj.filters  sender.vcxproj  sender.vcxproj.filters
